EmissionFactorMatching/objects/NZC_EmissionsMatchingAdvanceMatch__mdt.object
<CustomObject>
    <description>Used to house rules around Advanced matching, primarily used on asset records.</description>
    <fields>
        <fullName>HashFields__c</fullName>
        <description>Comma separated list of API field names used for searching or to be matched against</description>
        <inlineHelpText>Comma separated list of API field names used for searching or to be matched against</inlineHelpText>
        <label>Fields Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hash_Destination__c</fullName>
        <description>The destination field on record to store the quick search value</description>
        <inlineHelpText>The destination field on record to store the quick search value</inlineHelpText>
        <label>Quick Search Storage Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupDestination__c</fullName>
        <description>The quick search api field name on the target object to match against</description>
        <inlineHelpText>The quick search api field name on the target object to match against</inlineHelpText>
        <label>Quick Search Target Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupToPopulate__c</fullName>
        <description>The lookup field on source object to populate if a match is found</description>
        <inlineHelpText>The lookup field on source object to populate if a match is found</inlineHelpText>
        <label>Lookup To Populate</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAppliesTo__c</fullName>
        <description>The object API name this matching rule applies to</description>
        <inlineHelpText>The object API name this matching rule applies to</inlineHelpText>
        <label>Object Applies To</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScreeningField__c</fullName>
        <description>Api field name on trigger object used to screen out records from processing ( Boolean )</description>
        <inlineHelpText>Api field name on trigger object used to screen out records from processing ( Boolean )</inlineHelpText>
        <label>Screening Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryMatchFieldTarget__c</fullName>
        <description>Secondary match field to compare after initial match. Field should exist on target object. Use API name</description>
        <inlineHelpText>Secondary match field to compare after initial match. Field should exist on target object. Use API name</inlineHelpText>
        <label>Secondary Match Target Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryMatchSourceField__c</fullName>
        <description>Secondary field to compare after initial match is found. Field name should exist on triggering record. Use API name</description>
        <inlineHelpText>Secondary field to compare after initial match is found. Field name should exist on triggering record. Use API name</inlineHelpText>
        <label>Secondary Match Source Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>NZC Emissions Matching Advance Match</label>
    <listViews>
        <fullName>All_Records_All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>HashFields__c</columns>
        <columns>LookupToPopulate__c</columns>
        <columns>ObjectAppliesTo__c</columns>
        <columns>Hash_Destination__c</columns>
        <columns>LookupDestination__c</columns>
        <columns>ScreeningField__c</columns>
        <columns>SecondaryMatchFieldTarget__c</columns>
        <columns>SecondaryMatchSourceField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records All Fields</label>
    </listViews>
    <pluralLabel>NZC Emissions Matching Advance Match</pluralLabel>
</CustomObject>